v3/data-types/data.frbrrelationship.md
---
layout: sidebar
sidebar: s1
version: "dev"
title: "data.FRBRRELATIONSHIP"
---
<div class="macroSpec">
   <h3 id="data.FRBRRELATIONSHIP">data.FRBRRELATIONSHIP</h3>
   <table class="wovenodd">
      <tr>
         <td colspan="2" class="wovenodd-col2">Relationships between FRBR entities.</td>
      </tr>
      <tr>
         <td class="wovenodd-col1"><strong>Module</strong></td>
         <td class="wovenodd-col2">MEI.frbr</td>
      </tr>
      <tr>
         <td class="wovenodd-col1"><strong>Used by</strong></td>
         <td class="wovenodd-col2">
            <div class="parent"><a class="link_odd_classSpec" href="{{ site.baseurl }}/{{ page.version }}/attribute-classes/att.rel.html">att.rel</a> (@rel)
            </div>
         </td>
      </tr>
      <tr>
         <td class="wovenodd-col1"><strong>Allowed values</strong></td>
         <td class="wovenodd-col2">
            <dl>
               <dt>hasAbridgement</dt>
               <dd>Target is an abridgement, condensation, or expurgation of the current
                  entity.
               </dd>
               <dt>isAbridgementOf</dt>
               <dd>Reciprocal relationship of hasAbridgement.</dd>
               <dt>hasAdaptation</dt>
               <dd>Target is an adaptation, paraphrase, free translation, variation (music),
                  harmonization (music), or fantasy (music) of the current entity.
               </dd>
               <dt>isAdaptationOf</dt>
               <dd>Reciprocal relationship of hasAdaptation.</dd>
               <dt>hasAlternate</dt>
               <dd>Target is an alternate format or simultaneously released edition of the current
                  entity.
               </dd>
               <dt>isAlternateOf</dt>
               <dd>Reciprocal relationship of hasAlternate.</dd>
               <dt>hasArrangement</dt>
               <dd>Target is an arrangement (music) of the current entity.</dd>
               <dt>isArrangementOf</dt>
               <dd>Reciprocal relationship of hasArrangement.</dd>
               <dt>hasComplement</dt>
               <dd>Target is a cadenza, libretto, choreography, ending for unfinished work,
                  incidental music, or musical setting of a text of the current entity.
               </dd>
               <dt>isComplementOf</dt>
               <dd>Reciprocal relationship of hasComplement.</dd>
               <dt>hasEmbodiment</dt>
               <dd>Target is a physical embodiment of the current abstract entity; describes the
                  expression-to-manifestation relationship.
               </dd>
               <dt>isEmbodimentOf</dt>
               <dd>Reciprocal relationship of hasEmbodiment.</dd>
               <dt>hasExemplar</dt>
               <dd>Target is an exemplar of the class of things represented by the current entity;
                  describes the manifestation-to-item relationship.
               </dd>
               <dt>isExemplarOf</dt>
               <dd>Reciprocal relationship of hasExamplar.</dd>
               <dt>hasImitation</dt>
               <dd>Target is a parody, imitation, or travesty of the current entity.</dd>
               <dt>isImitationOf</dt>
               <dd>Reciprocal relationship of hasImitation.</dd>
               <dt>hasPart</dt>
               <dd>Target is a chapter, section, part, etc.; volume of a multivolume manifestation;
                  volume/issue of serial; intellectual part of a multipart work; illustration for a
                  text; sound aspect of a film; soundtrack for a film on separate medium; soundtrack
                  for
                  a film embedded in film; monograph in a series; physical component of a particular
                  copy; the binding of a book of the current entity.
               </dd>
               <dt>isPartOf</dt>
               <dd>Reciprocal relationship of hasPart.</dd>
               <dt>hasRealization</dt>
               <dd>Target is a realization of the current entity; describes the work-to-expression
                  relationship.
               </dd>
               <dt>isRealizationOf</dt>
               <dd>Reciprocal relationship of hasRealization.</dd>
               <dt>hasReconfiguration</dt>
               <dd>Target has been reconfigured: bound with, split into, extracted from the current
                  entity.
               </dd>
               <dt>isReconfigurationOf</dt>
               <dd>Reciprocal relationship of hasReconfiguration.</dd>
               <dt>hasReproduction</dt>
               <dd>Target is a reproduction, microreproduction, macroreproduction, reprint,
                  photo-offset reprint, or facsimile of the current entity.
               </dd>
               <dt>isReproductionOf</dt>
               <dd>Reciprocal relationship of hasReproduction.</dd>
               <dt>hasRevision</dt>
               <dd>Target is a revised edition, enlarged edition, or new state (graphic) of the
                  current entity.
               </dd>
               <dt>isRevisionOf</dt>
               <dd>Reciprocal relationship of hasRevision.</dd>
               <dt>hasSuccessor</dt>
               <dd>Target is a sequel or succeeding work of the current entity.</dd>
               <dt>isSuccessorOf</dt>
               <dd>Reciprocal relationship of hasSuccessor.</dd>
               <dt>hasSummarization</dt>
               <dd>Target is a digest or abstract of the current entity.</dd>
               <dt>isSummarizationOf</dt>
               <dd>Reciprocal relationship of hasSummarization.</dd>
               <dt>hasSupplement</dt>
               <dd>Target is an index, concordance, teacher's guide, gloss, supplement, or appendix
                  of the current entity.
               </dd>
               <dt>isSupplementOf</dt>
               <dd>Reciprocal relationship of hasSupplement.</dd>
               <dt>hasTransformation</dt>
               <dd>Target is a dramatization, novelization, versification, or screenplay of the
                  current entity.
               </dd>
               <dt>isTransformationOf</dt>
               <dd>Reciprocal relationship of hasTransformation.</dd>
               <dt>hasTranslation</dt>
               <dd>Target is a literal translation or transcription (music) of the current
                  entity.
               </dd>
               <dt>isTranslationOf</dt>
               <dd>Reciprocal relationship of hasTranslation.</dd>
            </dl>
         </td>
      </tr>
      <tr>
         <td class="wovenodd-col1"><strong>Declaration</strong></td>
         <td class="wovenodd-col2">
            <div class="code" xml:space="preserve" data-lang="ODD"><code>
                  <div class="indent1 indent"><span data-indentation="1" class="element">&lt;content&gt;</span>
                     
                     <div class="indent2 indent"><span data-indentation="2" class="element">&lt;valList <span class="attribute">type=</span><span class="attributevalue">"closed"</span>&gt;</span>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasAbridgement"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is an abridgement, condensation, or expurgation of the current
                              entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isAbridgementOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasAbridgement.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasAdaptation"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is an adaptation, paraphrase, free translation, variation (music),
                              harmonization (music), or fantasy (music) of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isAdaptationOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasAdaptation.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasAlternate"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is an alternate format or simultaneously released edition of the current
                              entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isAlternateOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasAlternate.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasArrangement"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is an arrangement (music) of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isArrangementOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasArrangement.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasComplement"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a cadenza, libretto, choreography, ending for unfinished work,
                              incidental music, or musical setting of a text of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isComplementOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasComplement.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasEmbodiment"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a physical embodiment of the current abstract entity; describes the
                              expression-to-manifestation relationship.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isEmbodimentOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasEmbodiment.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasExemplar"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is an exemplar of the class of things represented by the current entity;
                              describes the manifestation-to-item relationship.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isExemplarOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasExamplar.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasImitation"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a parody, imitation, or travesty of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isImitationOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasImitation.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasPart"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a chapter, section, part, etc.; volume of a multivolume manifestation;
                              volume/issue of serial; intellectual part of a multipart work; illustration for a
                              text; sound aspect of a film; soundtrack for a film on separate medium; soundtrack
                              for
                              a film embedded in film; monograph in a series; physical component of a particular
                              copy; the binding of a book of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isPartOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasPart.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasRealization"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a realization of the current entity; describes the work-to-expression
                              relationship.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isRealizationOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasRealization.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasReconfiguration"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target has been reconfigured: bound with, split into, extracted from the current
                              entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isReconfigurationOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasReconfiguration.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasReproduction"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a reproduction, microreproduction, macroreproduction, reprint,
                              photo-offset reprint, or facsimile of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isReproductionOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasReproduction.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasRevision"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a revised edition, enlarged edition, or new state (graphic) of the
                              current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isRevisionOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasRevision.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasSuccessor"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a sequel or succeeding work of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isSuccessorOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasSuccessor.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasSummarization"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a digest or abstract of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isSummarizationOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasSummarization.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasSupplement"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is an index, concordance, teacher's guide, gloss, supplement, or appendix
                              of the current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isSupplementOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasSupplement.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasTransformation"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a dramatization, novelization, versification, or screenplay of the
                              current entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isTransformationOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasTransformation.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"hasTranslation"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Target is a literal translation or transcription (music) of the current
                              entity.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        
                        <div class="indent3 indent"><span data-indentation="3" class="element">&lt;valItem <span class="attribute">ident=</span><span class="attributevalue">"isTranslationOf"</span>&gt;</span>
                           
                           <div class="indent4 indent"><span data-indentation="4" class="element">&lt;desc&gt;</span>Reciprocal relationship of hasTranslation.<span data-indentation="4" class="element">&lt;/desc&gt;</span></div>
                           <span data-indentation="3" class="element">&lt;/valItem&gt;</span></div>
                        <span data-indentation="2" class="element">&lt;/valList&gt;</span></div>
                     <span data-indentation="1" class="element">&lt;/content&gt;</span></div></code></div>
         </td>
      </tr>
   </table>
</div>